--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,10 +10,10 @@ set(SOURCE_FILES
         src/predictors.c
         include/predictors.h
         include/statemachine.h
-        src/statemachine.c)
+        src/statemachine.c include/fourcoltwobitbht.h src/fourcoltwobitbht.c.c)
 
 message("Extracting trace files... Please wait.")
 #execute_process(COMMAND ${CMAKE_COMMAND} -E tar xzvf ${CMAKE_SOURCE_DIR}/traces/traces.tar.gz
 #        WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/traces)
-
 add_executable(BPAnalysis ${SOURCE_FILES})
+target_link_libraries(BPAnalysis m)
