--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -13,9 +13,11 @@ set(SOURCE_FILES
         src/statemachine.c include/fourcoltwobitbht.h src/fourcoltwobitbht.c.c)
 
 message("Extracting trace files... Please wait.")
-execute_process(COMMAND ${CMAKE_COMMAND} -E make_directory ${CMAKE_CURRENT_BINARY_DIR}/traces)
+
+execute_process(COMMAND ${CMAKE_COMMAND} -E make_directory ${CMAKE_CURRENT_BINARY_DIR}/traces OUTPUT_QUIET ERROR_QUIET)
 execute_process(COMMAND ${CMAKE_COMMAND} -E tar xzvf  ${CMAKE_SOURCE_DIR}/traces/traces.tar.gz -C ${CMAKE_CURRENT_BINARY_DIR}/traces
-        WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/traces)
+        WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/traces
+        TIMEOUT 10 ERROR_QUIET)
 message("Trace files are extracted")
 
 add_executable(BPAnalysis ${SOURCE_FILES})
