Table filled for given algorithms

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -14,10 +14,11 @@ set(SOURCE_FILES
 
 message("Extracting trace files... Please wait.")
 
-execute_process(COMMAND ${CMAKE_COMMAND} -E make_directory ${CMAKE_CURRENT_BINARY_DIR}/traces OUTPUT_QUIET ERROR_QUIET)
-execute_process(COMMAND ${CMAKE_COMMAND} -E tar xzvf  ${CMAKE_SOURCE_DIR}/traces/traces.tar.gz -C ${CMAKE_CURRENT_BINARY_DIR}/traces
-        WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/traces
-        TIMEOUT 10 ERROR_QUIET)
+#execute_process(COMMAND ${CMAKE_COMMAND} -E make_directory ${CMAKE_CURRENT_BINARY_DIR}/traces OUTPUT_QUIET ERROR_QUIET TIMEOUT 5)
+#execute_process(COMMAND ${CMAKE_COMMAND} -E tar xzvf  ${CMAKE_SOURCE_DIR}/traces/traces.tar.gz -C ${CMAKE_CURRENT_BINARY_DIR}/traces
+#        WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/traces
+#        TIMEOUT 20 ERROR_QUIET)
+
 message("Trace files are extracted")
 
 add_executable(BPAnalysis ${SOURCE_FILES})
